--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://reshabh27.github.io/croblaze",
+  "homepage": ".",
   "name": "croblaze",
   "version": "0.1.0",
   "private": true,
